[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroid-trajectory"
version = "0.1.0"
description = "Load an asteroid from a database and compute its trajectory from a single command line."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "asteroid-trajectory" }]
keywords = ["astronomy", "orbital-mechanics", "asteroid", "kepler", "ephemeris", "nasa"]
dependencies = [
    "numpy>=1.20",
    "requests>=2.20",
    "rich>=12.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4", "plotly>=5.0"]
dev = ["pytest>=7.0"]

[project.scripts]
asteroid = "asteroid.cli:main"

[tool.setuptools]
packages = ["asteroid"]

[tool.setuptools.package-data]
asteroid = ["data/*.json"]
